# src/ldfd/docs/swagger.json
@@ -4001,6 +4001,10 @@
                 "auth": {
                     "$ref": "#/definitions/base.AuthEndpoints"
                 },
+                "docs": {
+                    "type": "string",
+                    "example": "/swagger/index.html"
+                },
                 "health": {
                     "type": "string",
                     "example": "/v1/health"
